--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/ecommerce-market-marketplace-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce Multi Vendor</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="root"></div>
