working on product card

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
       }
     </script>
   </head>
-  <body>
+  <body
+    class="bg-light-background-main dark:bg-dark-background-main text-light-text-primary dark:text-dark-text-primary"
+  >
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
